<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="apartment"
            type="ru.qwonix.android.rentucha.entity.Apartment" />

        <variable
            name="fragment"
            type="ru.qwonix.android.rentucha.fragments.search.PopupMapApartment" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        tools:context=".fragments.search.PopupMapApartment">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".33">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_background"
                    app:imageUrl="@{apartment.mainImageUrl}" />

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:onClick="@{() -> fragment.close()}"
                    android:src="@drawable/ic_baseline_cancel_24" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".66"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{@string/apart_search_item_location(apartment.countryName, apartment.cityName)}"
                        android:textColor="@color/gray_900"
                        tools:text="@string/apart_search_item_location" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{@string/apart_search_item_date(apartment.addedWeeksAgo)}"
                        tools:text="@string/apart_search_item_date"
                        android:textColor="@color/gray_700" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/apart_search_item_available_dates"
                        android:textColor="@color/gray_700" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{@string/apart_search_item_price_per_night(apartment.pricePerNight)}"
                        android:textColor="@color/gray_900"
                        tools:text="@string/apart_search_item_price_per_night" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_baseline_favorite_border_24" />

            </RelativeLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>