<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="ru.qwonix.android.rentucha.viewmodel.SearchSettingsViewModel" />
    </data>

    <com.google.android.material.card.MaterialCardView
        style="@style/MaterialCardView.SearchSettings.Selected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragments.search.settings.expanded.SearchSettingsWhenExpandedFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/when_settings_expanded"
                    android:textColor="@color/gray_900"
                    android:textSize="24sp" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp"
                    app:strokeColor="@color/gray_500"
                    app:strokeWidth="1dp">

                    <androidx.core.widget.NestedScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <!-- todo: calendar -->
                            <androidx.constraintlayout.widget.Placeholder
                                android:layout_width="wrap_content"
                                android:layout_height="1000dp" />
                        </LinearLayout>

                    </androidx.core.widget.NestedScrollView>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                style="@style/MaterialCardView.Cleared"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/button_when_setting_skip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginStart="20dp"
                    android:text="@string/when_settings_skip"
                    android:textColor="@color/gray_900"
                    android:textSize="16sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_when_setting_next"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginVertical="10dp"
                    android:layout_marginEnd="25dp"
                    android:backgroundTint="@color/gray_900"
                    android:minWidth="130dp"
                    android:text="@string/when_settings_next"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    app:cornerRadius="10dp" />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>