<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:orientation="vertical"
    tools:context=".fragments.search.settings.SearchSettingsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="20dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/button_search_settings_close"
            style="@style/MaterialCardView.ImageIconButton"
            android:layout_width="30dp"
            android:layout_height="30dp">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:src="@drawable/ic_baseline_close_24" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/search_settings_stays"
            android:textColor="@color/gray_900"
            android:textSize="18sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:clipChildren="false"
        android:orientation="vertical">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_container_search_settings_where"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:clipChildren="false"
            app:defaultNavHost="true"
            app:navGraph="@navigation/navigation_search_settings_where" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_container_search_settings_when"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:clipChildren="false"
            app:defaultNavHost="true"
            app:navGraph="@navigation/navigation_search_settings_when" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_container_search_settings_who"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:clipChildren="false"
            app:defaultNavHost="true"
            app:navGraph="@navigation/navigation_search_settings_who" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.card.MaterialCardView
        style="@style/MaterialCardView.Cleared"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/button_search_settings_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="20dp"
            android:text="@string/search_settings_clear"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_search_settings_search"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginVertical="10dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="#d23754"
            android:text="@string/search_settings_search"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:cornerRadius="10dp"
            app:icon="@drawable/ic_baseline_search_24"
            app:iconSize="25dp" />
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>
